--- a/coresite/static/coresite/scss/sections/_hero.scss
+++ b/coresite/static/coresite/scss/sections/_hero.scss
@@ -6,6 +6,7 @@
   overflow: hidden; // keeps background contained
   isolation: isolate;
   background: transparent;
+  padding-top: var(--scroll-offset);
 }
 
 /* Background container */
